--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 dependencies: 
   cupertino_icons: ^1.0.2
   get: 4.6.3
+  http: 0.13.4
+  get_storage: 2.0.3
   flutter: 
     sdk: flutter
 
