--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   get: 4.6.3
   http: 0.13.4
   get_storage: 2.0.3
+  lottie: 1.3.0
   flutter: 
     sdk: flutter
 
@@ -20,5 +21,7 @@ dev_dependencies:
     sdk: flutter
 
 flutter: 
+  assets: 
+    - assets/
   uses-material-design: true
 
